--- a/src/components/displayable/Displayable.css
+++ b/src/components/displayable/Displayable.css
@@ -4,7 +4,7 @@
     margin: 1em 0;
     border-radius: 1em;
     align-items: center;
-    color: var(--clr-black);
+    color: var(--clr-font);
 }
 
 .displayable p span {
