--- a/src/components/selectable/Selectable.css
+++ b/src/components/selectable/Selectable.css
@@ -5,17 +5,17 @@
     border-radius: 1em;
     align-items: center;
     transition: box-shadow 250ms linear;
-    color: var(--clr-black);
+    color: var(--clr-font);
 }
 
 .selectable:hover {
-    color: black;
-    box-shadow: 0 1px 2px rgba(0,0,0,0.07),
-                0 2px 4px rgba(0,0,0,0.07),
-                0 4px 8px rgba(0,0,0,0.07),
-                0 8px 16px rgba(0,0,0,0.07),
-                0 16px 32px rgba(0,0,0,0.07),
-                0 32px 64px rgba(0,0,0,0.07);
+    color: var(--clr-font);
+    box-shadow: 0 1px 2px var(--clr-shadow),
+                0 2px 4px var(--clr-shadow),
+                0 4px 8px var(--clr-shadow),
+                0 8px 16px var(--clr-shadow),
+                0 16px 32px var(--clr-shadow),
+                0 32px 64px var(--clr-shadow);
 }
 
 .selectable p span {
